Update README.md
Added how to use the project into README.md file.