@@ -1,3 +1,15 @@
+
+1-) Clone the project onto your computer.<br>
+2-) Go to Run > Edit Configurations... > add VM options > enter the following code:<br>
+--module-path "your-javafx-sdk-url\lib" --add-modules javafx.controls,javafx.fxml<br>
+apply the changes.<br>
+3-) If you want to change the song for the cake but keep the same name (if you don't want to modify the code), <br>follow these steps:<br>
+I-) Add a new song to <b>src>music.</b><br>
+II-) Rename the new song as <b>happyBirthDayToYou.wav</b><br>
+III-) New Song is ready to play in the program.
+
+You can see the Visual Representation of the project in the following part.
+
 # BirthDayProject
 **Cake Animation:**
  
